<resources>
    <string name="app_name">Book Fanatic</string>
    <string name="book_quote">Read your books\n wherever you are</string>
    <string name="login">Login</string>
    <string name="sign_in">Sign In</string>
    <string name="email">Email</string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="password">Password</string>
    <string name="token">realtoken</string>
    <string name="selectionner_image">Choose a Picture</string>
    <string name="email_envoye">E-mail Sent</string>
    <string name="code_reinit">Reset code</string>
    <string name="renvoyer">Resend code</string>
    <string name="confirmer">Confirm</string>
    pas_email
    <string name="pas_email">You haven\'t already received the e-mail ?</string>
    <string name="camera">Camera</string>
    <string name="galerie">Galerie</string>
    <string name="delete_account">Are you sure you want to delete your account ?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="your_profile">Account Settings</string>
    <string name="confirm_mdp_incorrect">Incorrect Password</string>
    <string name="close">Close</string>
    <string name="reset_mdp">Reset your password</string>
    <string name="password_change">Change your password</string>
    <string name="ancien_mdp">Current password</string>
    <string name="new_mdp">New password</string>
    <string name="confirm_mdp">Confirm password</string>
    <string name="supprimer_compte">Delete Your Account</string>
    <string name="update_profile">Update My Profile</string>
    <string name="changer">Change</string>
    <string name="fermer">Close</string>
    <string name="aucun_changement">No changes has been made</string>
    <string name="user">user</string>
    <string name="tel">Phone Number</string>
    <string name="my_profile">Profile Settings</string>
    <string name="confirm_pass">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="title_activity_home">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">BookShelf</string>
    <string name="champ_vide">This field canno\'t be empty!</string>
    <string name="code_incorrect">Reset password code is incorrect</string>
    <string name="changer_mdp">Change your password</string>
    <string name="reinit_mdp">Reset your password</string>
    <string name="desc_mdp_oublie">We will send a reset code to your e-mail account.</string>
    <string name="mdp_oublie">Forgotten password ?</string>
    <string name="longeur_code">Please enter a 5 digits code</string>
    <string name="app_name1">Pdf Reader</string>
    <string name="heading_2">Read your PDF using Text to Speech</string>
    <string name="pdf_reader">PDF Reader</string>
    <string name="click_to_select_a_pdf">Click to Select a PDF</string>

    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniamLorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniamLorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniamLorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniamLorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniamLorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniamLorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniamLorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniamLorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniamLorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniamLorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</string>
</resources>