<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgotPwdActivity"
    android:orientation="vertical"
    android:padding="20dp"

    >
    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:src="@drawable/ic_baseline_close_24"
        android:background="@android:color/transparent"
        android:layout_gravity="start"

        android:contentDescription="@string/close"
        android:layout_weight="1"

        android:id="@+id/close_btn"

        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:fontFamily="@font/sfbold"
        android:textSize="32sp"
        android:textAllCaps="true"
        android:text="@string/mdp_oublie"
        android:layout_marginTop="20dp"
        android:textColor="@color/noir"
        android:layout_weight="1"
        android:gravity="bottom"

        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:fontFamily="@font/sfpro"
        android:layout_weight="1"
        android:textSize="17sp"
        android:text="@string/desc_mdp_oublie"

        android:textStyle="bold"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="7"
        android:orientation="vertical"
        android:gravity="center_vertical"
        >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAllCaps="true"
        android:textSize="13sp"
        android:textColor="@color/viridian"
        android:fontFamily="@font/sfpro"
        android:text="@string/email"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:textStyle="bold"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:id="@+id/email_et"
        android:background="@drawable/rounded_edittext"
        android:hint="@string/email"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:inputType="textEmailAddress"
        android:importantForAutofill="no" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_button"
        android:layout_marginTop="50dp"
        android:text="@string/confirmer"
        android:textColor="@color/gris_light"
        android:fontFamily="@font/sflight"
        android:textAllCaps="true"
        android:textSize="20sp"
        android:textStyle="bold"
        android:gravity="center"

        android:id="@+id/connexion_btn"

        />
    </LinearLayout>

</LinearLayout>