<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResetPasswordActivity"
    android:orientation="vertical"
    android:padding="20dp"
    >
    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:src="@drawable/ic_baseline_keyboard_arrow_left_24"
        android:background="@android:color/transparent"
        android:layout_gravity="start"

        android:contentDescription="@string/close"
        android:layout_weight="1"

        android:id="@+id/back_btn"

        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="50dp"
        android:layout_weight="1"
        android:fontFamily="@font/sfbold"
        android:text="@string/changer_mdp"
        android:textAllCaps="true"
        android:textColor="@color/noir"
        android:textSize="32sp"

        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8"
        android:orientation="vertical"
        android:gravity="start"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="true"
            android:textSize="13sp"
            android:fontFamily="@font/sfpro"
            android:textColor="@color/viridian"
            android:text="@string/new_mdp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="10dp"
            android:textStyle="bold"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:id="@+id/new_mdp_et"
            android:background="@drawable/rounded_edittext"
            android:hint="@string/new_mdp"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"

            android:inputType="textPassword"
            android:importantForAutofill="no" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="true"
            android:textSize="13sp"
            android:fontFamily="@font/sfpro"
            android:textColor="@color/viridian"
            android:text="@string/confirm_mdp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="10dp"
            android:textStyle="bold"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:id="@+id/confirm_mdp_et"
            android:background="@drawable/rounded_edittext"
            android:hint="@string/confirm_mdp"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"

            android:inputType="textPassword"
            android:importantForAutofill="no" />


        <Button
            android:id="@+id/change_pass_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginTop="50dp"
            android:background="@drawable/rounded_button"
            android:fontFamily="@font/sflight"
            android:gravity="center"
            android:text="@string/reinit_mdp"
            android:textAllCaps="true"
            android:textColor="@color/gris_light"
            android:textSize="20sp"
            android:textStyle="bold"

            />


    </LinearLayout>

</LinearLayout>